# redis-rust

./: .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bloodhound  Dockerfile.profiling  HARNESS.md  PAPER.md  README.md  bacon.toml  cloudbuild.yaml  perf_config.toml  plan.md  replit.md  rustfmt.toml  taplo.toml  test-acl.conf
.cargo/: config.toml
.claude/agents/: actor-model.md  distributed-systems.md  dst.md  formal-verification.md  rust-dev.md  tigerstyle.md
.githooks/: pre-commit
.github/workflows/: bloodhound.yml  ci.yml  soak.yml  stateright.yml
benches/: hot_paths.rs
bloodhound/bloodhound-state/cow/: root.qcow2
docker/: .env.example  Dockerfile  Dockerfile.nodd  Dockerfile.persistent  Dockerfile.production  Dockerfile.shadow  README.md  docker-compose.localfs.yml  docker-compose.production.yml  docker-compose.shadow.yml  docker-compose.wal-integration.yml  docker-compose.yml
docker-benchmark/: Dockerfile.redis-rust  Dockerfile.server-persistent  perf_config.toml  run-redis8-comparison.sh  run-shard-scaling.sh
docker-benchmark/results/: redis8_comparison_20260106_182354.md  redis8_comparison_20260108_193129.md  redis8_comparison_20260108_193324.md  redis8_comparison_20260108_194447.md  redis8_comparison_20260108_195718.md  redis8_comparison_20260108_201109.md  redis8_comparison_20260108_203356.md  redis8_comparison_20260109_225723.md  redis8_comparison_20260109_230345.md  redis8_comparison_20260109_230658.md
docs/: CANCEL_SAFETY.md  DST_GUIDE.md  HARNESS.md  PAPER.md  RUST_STYLE.md
docs/adr/: 001-simulation-first-development.md  002-actor-per-shard-architecture.md  003-tigerstyle-coding-standards.md  004-anna-kvs-crdt-replication.md  007-feature-flag-optimizations.md  008-docker-benchmark-methodology.md  009-security-tls-acl.md  010-wal-hybrid-persistence.md  EVOLUTION.md  README.md
docs/adr/deviations/: DEV-001-file-size-limit.md  README.md
docs/adr/gaps/: README.md
evolve/: code_optimizations.py
examples/: metrics_agent.rs  metrics_dashboard.rs
gepa/: README.md  __init__.py  __main__.py  candidate.py  dst_candidate.py  dst_evaluator.py  dst_optimizer.py  evaluator.py  evolution.py  harness.py  mutations.py  scorer.py  skill_fitness.py  test_candidate.py  test_dst_candidate.py  test_dst_optimizer.py  test_evaluator.py  test_evolution.py  test_mutations.py  test_scorer.py
maelstrom/maelstrom/store/: current
scripts/: bench_staging.sh  capture_baseline.sh  complex-persistence-test.sh  local-ci.sh  maelstrom_test.sh  profile_local.sh  redis-server-wrapper.sh  run-redis-compat.sh  run-wal-integration.sh  setup-hooks.sh  soak-dst.sh
specs/tla/: AntiEntropy.tla  GossipProtocol.tla  README.md  ReplicationConvergence.tla  StreamingPersistence.tla  WalDurability.tla
src/: lib.rs  main.rs
src/buggify/: config.rs  mod.rs
src/io/: simulation.rs
src/metrics/: commands.rs  key_encoder.rs  mod.rs  query.rs  state.rs  types.rs
src/observability/: config.rs  tracing_setup.rs
src/production/: adaptive_actor.rs  adaptive_replication.rs  connection.rs  connection_optimized.rs  connection_pool.rs  gossip_manager.rs  hotkey.rs  load_balancer.rs  mod.rs  perf_config.rs  replicated_shard_actor.rs  replicated_state.rs  response_pool.rs  server.rs  server_config.rs  server_optimized.rs  sharded_actor.rs  shared_state.rs  ttl_manager.rs
src/redis/: command.rs  commands.rs  data.rs  executor_dst.rs  hash_dst.rs  list_dst.rs  lua.rs  mod.rs  parser.rs  resp.rs  resp_optimized.rs  server.rs  set_dst.rs  sorted_set_dst.rs  tests.rs  transaction_dst.rs
src/redis/data/: hash.rs  list.rs  mod.rs  sds.rs  set.rs  skiplist.rs  sorted_set.rs  value.rs
src/redis/executor/: acl_ops.rs  bitmap_ops.rs  config_ops.rs  hash_ops.rs  key_ops.rs  list_ops.rs  mod.rs  scan_ops.rs  script_ops.rs  set_ops.rs  sorted_set_ops.rs  string_ops.rs  transaction_ops.rs
src/redis/tests/: command_parser_tests.rs  list_command_tests.rs  lua_basic_tests.rs  lua_command_tests.rs  lua_redis_call_tests.rs  mod.rs  resp_parser_tests.rs  scan_tests.rs  set_option_tests.rs  sorted_set_command_tests.rs  transaction_tests.rs
src/replication/: anti_entropy.rs  config.rs  crdt_dst.rs  gossip.rs  gossip_router.rs  lattice.rs  mod.rs  state.rs
src/replication/state/: conditional_tests.rs  crdt_value.rs  delta.rs  error.rs  hash_tests.rs  hincrby_tests.rs  mod.rs  replicated_value.rs  shard_state.rs  tests.rs  type_mismatch_tests.rs
src/security/: acl_dst.rs  mod.rs
src/security/acl/: commands.rs  file.rs  mod.rs  patterns.rs  user.rs
src/security/tls/: config.rs  mod.rs  stream.rs
src/simulator/: connection.rs  crash.rs  dst_integration.rs  executor.rs  harness.rs  mod.rs  multi_node.rs  network.rs  partition_tests.rs  rng.rs  time.rs
src/stateright/: README.md  anti_entropy.rs  mod.rs  persistence.rs  replication.rs
src/streaming/: checkpoint.rs  clock.rs  compaction_dst.rs  config.rs  dst.rs  integration.rs  manifest.rs  mod.rs  object_store.rs  recovery.rs  s3_store.rs  segment.rs  simulated_store.rs  wal.rs  wal_actor.rs  wal_config.rs  wal_dst.rs  wal_store.rs  write_buffer.rs
test-certs/: admin.crt  admin.csr  admin.key  alice.crt  alice.csr  alice.key  ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
tests/: acl_dst_test.rs  anti_entropy_tests.rs  cluster_config_dst_test.rs  connection_simulation_test.rs  connection_transaction_dst.rs  crdt_dst_test.rs  dst_batch_verification.rs  eventual_consistency_test.rs  executor_dst_test.rs  hash_dst_test.rs  list_dst_test.rs  metrics_test.rs  redis_equivalence_test.rs  set_dst_test.rs  sorted_set_dst_test.rs  streaming_dst_test.rs  transaction_dst_test.rs  wal_dst_test.rs
