[package]
name = "redis-sim"
version = "0.1.0"
edition = "2021"

[features]
default = ["lua"]
simulation = []
compression = ["zstd"]
lua = ["dep:mlua"]
s3 = ["dep:object_store"]
datadog = [
    "dep:dogstatsd",
    "dep:opentelemetry",
    "dep:opentelemetry-datadog",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
    "dep:reqwest",
]

# Security features
tls = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:x509-parser"]
acl = ["dep:sha2"]
security = ["tls", "acl"]

# Code-level optimization flags (default OFF for safety)
# Enable incrementally to measure impact
opt-single-key-alloc = []     # P0: Single allocation in set_direct
opt-static-responses = []     # P1: Static OK/PONG responses
opt-zero-copy-get = []        # P2: Zero-copy GET response
opt-itoa-encode = ["itoa"]    # P3: Fast integer encoding
opt-fxhash-routing = []       # P4: FxHash for shard routing (uses existing ahash)
opt-atoi-parse = ["atoi"]     # P5: Fast integer parsing

# Enable all optimizations
opt-all = [
    "opt-single-key-alloc",
    "opt-static-responses",
    "opt-zero-copy-get",
    "opt-itoa-encode",
    "opt-fxhash-routing",
    "opt-atoi-parse",
]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
fnv = "1.0"
ahash = "0.8"
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
crossbeam = "0.8"
object-pool = "0.5"
memchr = "2.7"
crc32fast = "1.3"
bincode = "1.3"
sha1 = "0.10"

[dependencies.mlua]
version = "0.10"
features = ["lua54", "vendored"]
optional = true

[dependencies.zstd]
version = "0.13"
optional = true

[dependencies.object_store]
version = "0.11"
features = ["aws"]
optional = true

# Datadog observability dependencies
[dependencies.dogstatsd]
version = "0.11"
optional = true

[dependencies.opentelemetry]
version = "0.22"
optional = true

[dependencies.opentelemetry-datadog]
version = "0.10"
features = ["reqwest-client"]
optional = true

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.22"
features = ["rt-tokio"]
optional = true

[dependencies.tracing-opentelemetry]
version = "0.23"
optional = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
redis = { version = "0.25", features = ["tokio-comp"] }

# Optional optimization dependencies
[dependencies.itoa]
version = "1.0"
optional = true

[dependencies.atoi]
version = "2.0"
optional = true

# Security dependencies
[dependencies.tokio-rustls]
version = "0.26"
optional = true

[dependencies.rustls-pemfile]
version = "2"
optional = true

[dependencies.x509-parser]
version = "0.16"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

# Criterion benchmark configuration
[[bench]]
name = "hot_paths"
harness = false

[[bin]]
name = "redis-sim"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "src/bin/test_client.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "quick-benchmark"
path = "src/bin/quick_benchmark.rs"

[[bin]]
name = "maelstrom-kv"
path = "src/bin/maelstrom_kv.rs"

[[bin]]
name = "maelstrom-kv-replicated"
path = "src/bin/maelstrom_kv_replicated.rs"

[[bin]]
name = "redis-server-optimized"
path = "src/bin/server_optimized.rs"

[[bin]]
name = "server-persistent"
path = "src/bin/server_persistent.rs"

[[bin]]
name = "shadow-proxy"
path = "src/bin/shadow_proxy.rs"

[[bin]]
name = "profile-benchmark"
path = "src/bin/profile_benchmark.rs"

[lib]
name = "redis_sim"
path = "src/lib.rs"

# Release profile with LTO for maximum performance
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Profile for PGO instrumentation (generate profile data)
[profile.release-instrumented]
inherits = "release"
lto = false
strip = false

# Profile for PGO-optimized build (use profile data)
[profile.release-pgo]
inherits = "release"
lto = "fat"

# Profile for profiling (has debug symbols)
[profile.profiling]
inherits = "release"
debug = true
strip = false
